test/fail/basic_syntax/invalid_tuple_subscript.lly
#[
SyntaxError: Index 3 is out of range for tuple[integer, string].
Where: File "invalid_tuple_subscript.lly" at line 6
]#

var s: string = <[1, "2"]> [3]
